Session3/homework/2-dev-enviroment/books/deployment/deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: books
  labels:
    app: books
    service: books
    project: istio-course
spec:
  ports:
    - port: 8080
      name: http
  selector:
    app: books
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: books
  labels:
    app: books
    service: books
    project: istio-course
spec:
  hosts:
    - books
  http:
    - route:
      - destination:
          host: books
          subset: v1
        weight: 25
      - destination:
         host: books
         subset: v2
        weight: 75
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: books
  labels:
    app: books
    project: istio-course
spec:
  host: books
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: books-v1
  labels:
    app: books
    version: v1
    project: istio-course
spec:
  replicas: 1
  selector:
    matchLabels:
      app: books
      version: v1
      project: istio-course
  template:
    metadata:
      labels:
        app: books
        version: v1
        project: istio-course
    spec:
      serviceAccountName: servicemesh-books
      containers:
        - name: books
          image: neciro/books-service:1.0
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: "/actuator/health"
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 60
            timeoutSeconds: 5
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: "/actuator/health"
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 60
            timeoutSeconds: 5
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          resources:
            requests:
              memory: "500M"
              cpu: "0.15"
            limits:
              memory: "1500M"
              cpu: "0.75"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: books-v2
  labels:
    app: books
    version: v2
    project: istio-course
spec:
  replicas: 1
  selector:
    matchLabels:
      app: books
      version: v2
      project: istio-course
  template:
    metadata:
      labels:
        app: books
        version: v2
        project: istio-course
    spec:
      serviceAccountName: servicemesh-books
      containers:
        - name: books
          image: neciro/books-service:2.0
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: "/actuator/health"
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 60
            timeoutSeconds: 5
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: "/actuator/health"
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 60
            timeoutSeconds: 5
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          resources:
            requests:
              memory: "500M"
              cpu: "0.15"
            limits:
              memory: "1500M"
              cpu: "0.75"
